single verse window styles and many other changes

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -188,6 +188,7 @@
   height: 15px
   display: block
   float: left
+  color: #fff !important
   font-size: 15px
   max-width: 205px
   white-space: nowrap
