--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -25,8 +25,13 @@
     margin-bottom: 0
 
 .bookmark_edit
+  opacity: 1
   font-size: 12px
   margin-top: -10px
+
+  .created_as_date,
+  .mdash
+    display: none
 
 .bookmark_edit p a
   text-transform: capitalize
