--- a/app/views/bookmarks/_list_item.html.haml
+++ b/app/views/bookmarks/_list_item.html.haml
@@ -14,9 +14,11 @@
     %p
       - if @me
         %span= link_to(t('bookmarks.edit'), edit_bookmark_path(list_item.id))
-        &mdash;
+        %span.mdash
+          &mdash;
         %span.confirm= link_to(t('bookmarks.delete'), bookmark_path(list_item.id), "data-confirm-text" => t("bookmarks.confirm delete"), :method => :delete)
-        &mdash;
+        %span.mdash
+          &mdash;
       %span.created_as_date= t('created ago', time_ago: time_ago_in_words(list_item.created_as_date))
   - if list_item.labels.present?
     %p
