--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -4,8 +4,8 @@
 // alt_version:
 
 .mobile
-  %div.verse_toolbar
-    %nav{class: ('authed' if current_auth)}
+  %div.verse_toolbar{class: ('authed' if current_auth)}
+    %nav
       %a.submenu_btn.highlight_btn{href: 'javascript:void(0);'}
       %a.submenu_btn.bookmark_btn{href: 'javascript:void(0);', "data-action" => new_bookmark_path, "data-method" => 'GET'}
       %a.submenu_btn.note_btn{href: 'javascript:void(0);', "data-action" => new_note_path, "data-method" => 'GET'}
