--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -40,28 +40,54 @@
 #main article.mobile
   font-size: 13px
   line-height: 1.7
+  background: none
+  padding-top: 20px
 
-#mobile_content
-  overflow: hidden
-  margin-bottom: 10px
-  h1
-    line-height: 1.18em
-  section.main
-    p
-      margin-bottom: 10px
-  .multilingual
-    float: right
-    text-align: center
-    padding: 0 10px
+  #mobile_content
+    overflow: hidden
+    margin-bottom: 10px
+    width: auto
+    float: none !important
+    h1
+      line-height: 1.18em
+
+  #mobile_content
+    .main
+      width: 46%
+      padding-right: 4%
+      float: left
+      line-height: 1.45em
+      p
+        margin-bottom: 10px
+
+  #mobile_content
+    .multilingual
+      float: right
+      text-align: center
+      padding: 0 0 0 4%
+      width: 46%
+      border-left: 1px solid #e1e1e1
+
+      p
+        font-size: 13px
+        line-height: 1.4
+      h3
+        font-size: 12px
+        margin: 0 0 5px 0
+
+#mobile_downloads
+  float: none !important
+  width: auto
+  padding: 0
+  border-left: 0
+
+  .left_column
+    float: left
     width: 50%
-    border-left: 1px solid #e1e1e1
-    margin-left: 15px
-    p
-      font-size: 13px
-      line-height: 1.4
-    h3
-      font-size: 12px
-      margin: 0 0 5px 0
+  .right_column
+    float: left
+    padding-left: 10px
+    width: 46%
 
 #mobile_downloads h3
   font-size: 15px
@@ -69,24 +95,6 @@
 #mobile_downloads ul
   list-style: none
   width: 50%
-
-#mobile_downloads
-  .left_column
-    float: left
-    width: 50%
-  .right_column
-    float: left
-    padding-left: 10px
-    width: 46%
-
-#mobile_downloads
-  .left_column
-    float: left
-    width: 50%
-  .right_column
-    float: left
-    padding-left: 10px
-    width: 46%
 
 #mobile_downloads ul li
   background: none
@@ -99,13 +107,6 @@
 
 #mobile_downloads a.cta
   background: image-url("mobile_download.png") 14px center no-repeat #81a951 !important
-  background: -moz-linear-gradient(top,  #81a951 0%, #679037 100%)
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#81a951), color-stop(100%,#679037))
-  background: -webkit-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: -o-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: -ms-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: linear-gradient(top,  #81a951 0%,#679037 100%)
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#81a951', endColorstr='#679037',GradientType=0 )
   display: block
   padding: 15px 15px 12px 54px
   border-radius: 4px
@@ -113,6 +114,9 @@
   box-shadow: inset 0px 1px 0px rgba(#fff, .3)
   overflow: hidden
   clear: both
+
+  img
+    display: none
 a.cta h3
   margin-bottom: 0
 a.cta h4
@@ -166,12 +170,12 @@ a.cta span
   font-family: "Helvetica Neue", Helvetica, Sans-serif
 
 #main section.testimonials ul li
-  padding: 5px 20px 10px 55px
-  margin: 0
-  background: image-url("mobile_quote.png") no-repeat 15px 0px
-
-#main section.testimonials ul li:last-child
-  border: 0
+  padding: 5px 20px 10px 35px
+  margin: 0 0 10px
+  background: image-url("mobile_quote.png") no-repeat top left
+  float: none
+  width: auto
+  border-right: 0
 
 #main section.testimonials ul li h3
   font-size: 13px
