added close tab to verse toolbar

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -584,7 +584,8 @@ p
           p
             display: block
             padding-right: 70px
-            background: image-url("Bible-app-icon-en-small.png") no-repeat top right
+            background: image-url("Bible-app-icon-english-50x50.png") no-repeat top right
+            min-height: 50px
           span
             p
               background: transparent
