--- a/app/assets/stylesheets/mobile/_bookmarks.sass
+++ b/app/assets/stylesheets/mobile/_bookmarks.sass
@@ -14,6 +14,29 @@
   .li_bookmark
     background: none
 
+    .gutter_bottom_half
+
+      a
+        font-size: 18px
+
+    span
+      a
+        //display: block
+        width: 90%
+        margin: 0 5%
+        font-size: 16px
+        +border-radius(16px)
+        +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
+        border: 1px solid #666
+        display: inline-block
+        font:
+          size: 15px
+          weight: bold
+        line-height: 1.3
+        text-align: center
+        text-shadow: rgba(#000, 0.5) 0 1px 0
+        padding: 7px 20px
+
     div
       float: none !important
       width: auto
