--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -10,6 +10,11 @@
       %a.submenu_btn.bookmark_btn{href: 'javascript:void(0);', "data-action" => new_bookmark_path, "data-method" => 'GET'}
       %a.submenu_btn.note_btn{href: 'javascript:void(0);', "data-action" => new_note_path, "data-method" => 'GET'}
       %a.submenu_btn.share_btn{href: 'javascript:void(0);', "data-action" => new_share_path, "data-method" => 'GET'}
+    %div.close_tab
+      %span.first
+      %div.mid
+        %a.menu_close.verse_close_btn
+      %span.last
 
   %div.color_toolbar
     %nav
