--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,12 +1,6 @@
 %footer#footer{:role => "contentinfo"}
   = cache "#{@site}_footer_#{I18n.locale}", expires_in: a_short_time do
     %p.float_left
-      &copy;
-      = Date.today.year
-      %a{:href => 'http://www.lifechurch.tv'}=t("lifechurch short url")
-      %span.separator.mobile-remove
-        |
-      %br.mobile-add
       %a{:href => external_url(:now)}=t("now")
       %span.separator
         |
@@ -30,16 +24,24 @@
         %span.separator
           |
         %a{:href => @site.donate_path || donate_path}=t("donate title")
-  %p.float_right
-    %label{:for => 'choose_language'}
-      =t("choose language field")
-      &nbsp;
-    %label.select_wrap{:for => 'choose_language'}
-      %span
-        %select{:id => 'choose_language', :name => 'choose_language'}
-          - I18n.available_locales.each do |loc|
-            - url = url_for(params.merge(locale: loc))
-            - url = "/#{loc}" + url_for(params.merge({locale: loc, only_path: true})) if loc == I18n.default_locale #default locale is ommited (routing-filter gem) for overall convenience, but removes /<default locale> from url_for path, so we must add it explicitly here.
-            %option{value: url, selected: loc == I18n.locale}= t("language name", locale: loc)
+  .lang.float_right
+    %p
+      %label{:for => 'choose_language'}
+        =t("choose language field")
+        &nbsp;
+      %label.select_wrap{:for => 'choose_language'}
+        %span
+          %select{:id => 'choose_language', :name => 'choose_language'}
+            - I18n.available_locales.each do |loc|
+              - url = url_for(params.merge(locale: loc))
+              - url = "/#{loc}" + url_for(params.merge({locale: loc, only_path: true})) if loc == I18n.default_locale #default locale is ommited (routing-filter gem) for overall convenience, but removes /<default locale> from url_for path, so we must add it explicitly here.
+              %option{value: url, selected: loc == I18n.locale}= t("language name", locale: loc)
+    .copy.float_right
+      %span &copy;
+      = Date.today.year
+      %a{:href => 'http://www.lifechurch.tv'}=t("lifechurch short url")
+      %span.separator.mobile-remove
+        |
+      %br.mobile-add
 -unless ENV['RACK_ENV'] =~ /production/i
   %p.small.mute.float_right= "Non-production deployment, pointing at: #{Cfg.try :api_root}"
