all versions link works

--- a/app/views/versions/index.html.haml
+++ b/app/views/versions/index.html.haml
@@ -1,5 +1,9 @@
 - @title = t('versions.index title')
 
+- content_for :title do
+  = t('versions.index title')
+
+
 %article
   %h1= "#{t('bible versions')}"
   %ul
