--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -282,6 +282,12 @@
   .action_button_green,
   .action_button_green
     padding: 5px 20px !important
+
+  .version_select .scroll .loading
+    display: none
+
+  .version_select .scroll::-webkit-scrollbar
+    display: none
       
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
