fixed book/chapter overlay scrollbar

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -286,6 +286,7 @@
   .version_select .scroll .loading
     display: none
 
+  #menu_book_chapter .scroll::-webkit-scrollbar,
   .version_select .scroll::-webkit-scrollbar
     display: none
       
