Client settings fix for font size, styling fix for menu headers.

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -20,8 +20,9 @@
 
   header
     background:
-      color: #0C0C0C !important
+      color: transparent !important
       image: none !important
+    padding: 5px !important
     border: none !important
     text-shadow: none !important
     box-shadow: none !important
