fixed position of settings menu

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -156,6 +156,7 @@ div.close_tab
   color: #fff
   display: none
   left: 0px
+  top: -171px
 
 #menu_settings header,
 #menu_settings .menu_arrow,
@@ -305,7 +306,7 @@ div.close_tab
   a
     display: block
     float: left
-    width: 33.3%
+    width: 33.33%
     height: 44px
     background: #2C2B2B
     margin: 0px
