--- a/app/views/shared/_menu_settings.html.haml
+++ b/app/views/shared/_menu_settings.html.haml
@@ -1,7 +1,7 @@
 #menu_settings.dynamic_menu
   %span.menu_arrow
     &nbsp;
-  .tab_navigation.settings
+  .tab_navigation.settings.mobile
     %a.font{:href => '#font', :class => 'selected'} Font
     %a.font_size{:href => '#size'} Size
     %a.extras{:href => '#extras'} Extras
