--- a/app/assets/stylesheets/mobile/_audio_player.sass
+++ b/app/assets/stylesheets/mobile/_audio_player.sass
@@ -67,7 +67,7 @@
   position: absolute
   top: 50%
   left: 50px
-  width: 191px !important
+  width: 85% !important
 
 .mejs-time-rail span
   display: block
