fixed header padding issue

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -178,12 +178,12 @@
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
-  padding-left: 0px
-
-#header #page_title.pad
   padding: 14px 0px 0px
 
-#header #page_title a
+#header h1
+  padding: 0px
+
+#header h1 a
   padding: 14px 5px 8px 8px
   height: 15px
   display: block
