--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -22,7 +22,7 @@
     = version.abbreviation
   %span.right_btn_slice
 
-- content_for :title do
+- content_for :title_link do
   = link_to(reference.human, 'javascript:void(0);')
   %span.right_btn_slice
 
