fixed bookmark header

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -287,7 +287,10 @@
     display: none
 
   #menu_book_chapter .scroll::-webkit-scrollbar,
-  .version_select .scroll::-webkit-scrollbar
+  .version_select .scroll::-webkit-scrollbar,
+  .color,
+  .color_picker_list,
+  #bookmark_update_btn
     display: none
       
   // TODO: delete as many as possible, moving only
