--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -69,7 +69,8 @@
 #header #nav_avatar,
 #header #nav_search_btn,
 #header #nav_signin,
-#header .profile_btn
+#header .profile_btn,
+#header .back_btn
   text-indent: 100%
   white-space: nowrap
   overflow: hidden
@@ -82,8 +83,9 @@
 #header .close_btn
   background: image-url("mobile/close_btn.png") 12px 8px no-repeat
 
-.reader_modal_header .close_btn
-  background: image-url("nav_back.png") 12px 8px no-repeat  
+.reader_modal_header .close_btn,
+#header .back_btn
+  background: image-url("nav_back.png") 12px 8px no-repeat
 
 #header .save_btn
   background: image-url("mobile/save_btn.jpg") repeat-x
