--- a/app/views/bookmarks/edit.html.haml
+++ b/app/views/bookmarks/edit.html.haml
@@ -1,5 +1,5 @@
 - content_for :mobile_left_nav do
-  %a.cancel_btn{:href => '/bookmarks'}= t('cancel')
+  %a.back_btn{:href => '/bookmarks'}= t('cancel')
 
 - content_for :title do
   = t('bookmarks.edit bookmark')
