fixed full screen mode when in mobile closes #137

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -288,8 +288,8 @@
 
   #menu_book_chapter .scroll::-webkit-scrollbar,
   .version_select .scroll::-webkit-scrollbar,
-  .color,
-  .color_picker_list,
+  .full_page_form .color,
+  .full_page_form .color_picker_list,
   #bookmark_update_btn
     display: none
       
