--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -256,7 +256,7 @@
 
   .mobile nav + nav
     margin-top: -20px
-  
+
   .mobile nav + nav ul
     height: 87px
 
@@ -264,7 +264,7 @@
   .mobile #nav_mobile_sign_out a,
   .mobile #nav_mobile_sign_up a
     padding-left: 20px
-    
+
   .mobile #nav_mobile_sign_up a
     +background-image(linear-gradient(#1a90cd, #0077b4))
     background-color: #0077b4
@@ -292,7 +292,23 @@
   .full_page_form .color_picker_list,
   #bookmark_update_btn
     display: none
-      
+
+  article#plan-index .plan_filters,
+  article#plan-index .plan_search
+    display: none
+
+  article#plan-index .split_pane_sidebar
+    display: block !important
+    width: 100%
+    background: transparent
+
+  article#plan-index .split_pane_sidebar dl
+    border: 0
+
+  article#plan-index dd.highlighted a,
+  .split_pane_sidebar dd a:hover
+    background: transparent
+
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
   @import mobile/avatars
