--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -19,10 +19,9 @@
   border: 1px solid #1e1e20
   overflow: hidden
   text-shadow: rgba(#fff, 0.7) 0 1px 0
-  height: 100%
   width: 100% !important
-  position: fixed
-  top: 0px
+  position: absolute
+  top: -46px
   left: 0px
   z-index: 100000
 
@@ -195,7 +194,7 @@
 #modal_single_verse #modal_window section .big
   font-size: 24px
   width: 90%
-  padding: 25% 5% 0%
+  padding: 120px 5% 0%
   line-height: 45px
 
 #modal_window .action_button_blue,
