added settings cog to RP overlay - closes #129

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -255,7 +255,8 @@
     text-decoration: none
 
   .mobile nav + nav
-    margin-top: -20px
+    //margin-top: -20px
+    float: right
 
   .mobile nav + nav ul
     height: 87px
