--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -64,6 +64,7 @@
 #header .settings_btn,
 #header .info_btn,
 #header .subscription_btn,
+.settings_btn,
 .cancel_btn,
 .close_btn,
 #header #nav_avatar,
