--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -19,6 +19,7 @@
   border: 1px solid #1e1e20
   overflow: hidden
   text-shadow: rgba(#fff, 0.7) 0 1px 0
+  height: 800px
   width: 100% !important
   position: absolute
   top: -46px
