--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -310,6 +310,15 @@
   .split_pane_sidebar dd a:hover
     background: transparent
 
+  .reading_plan_index h1
+    display: block !important
+    font-size: 32px
+    margin-top: 20px
+
+  .reading_plan_index .action_button_green,
+  .reading_plan_index .action_button_blue
+    width: 90%
+
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
   @import mobile/avatars
