Tweaked styles in /mobile to fix broken desktop. Cleaned up pages.sass

--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -1,3 +1,5 @@
+// ------- File should be clear of redundant desktop code
+
 /* About page */
 
 .partners_content .partners_box
@@ -89,22 +91,6 @@
     padding-left: 10px
     width: 46%
 
-#mobile_downloads h3
-  font-size: 15px
-
-#mobile_downloads ul
-  list-style: none
-  width: 50%
-
-#mobile_downloads ul li
-  background: none
-  padding: 0
-  margin: 10px 0
-
-#mobile_downloads ul li a
-  font-weight: bold
-  color: $green
-
 #mobile_downloads a.cta
   background: image-url("mobile_download.png") 14px center no-repeat #81a951 !important
   display: block
@@ -119,55 +105,6 @@
     display: none
 a.cta h3
   margin-bottom: 0
-a.cta h4
-  margin: 0px
-  padding: 0px
-  font-size: 16px
-  text-shadow: 0px 1px 0px rgba(0,0,0,.2)
-  color: #fff
-  float: left
-a.cta span
-  text-shadow: 0px 1px 0px rgba(0,0,0,.2)
-  margin: 0px
-  padding: 0px
-  font-size: 13px
-  color: #fff
-  float: left
-
-#dl_iphone
-  background: image-url("mobile_dl_icons.png") 0px 0px no-repeat !important
-
-#dl_android
-  background: image-url("mobile_dl_icons.png") 0px -50px no-repeat !important
-
-#dl_blackberry
-  background: image-url("mobile_dl_icons.png") 0px -100px no-repeat !important
-
-#dl_windows
-  background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
-
-#dl_windows8
-  background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
-
-#dl_hppalm
-  background: image-url("mobile_dl_icons.png") 0px -200px no-repeat !important
-
-#dl_java
-  background: image-url("mobile_dl_icons.png") 0px -250px no-repeat !important
-
-#dl_symbian
-  background: image-url("mobile_dl_icons.png") 0px -300px no-repeat !important
-
-#dl_mobile
-  background: image-url("mobile_dl_icons.png") 0px -350px no-repeat !important
-
-#dl_amazon
-  background: image-url("mobile_dl_icons.png") 0px -400px no-repeat !important
-
-#main section.testimonials h2
-  font-size: 18px
-  padding: 15px 0 15px 0
-  font-family: "Helvetica Neue", Helvetica, Sans-serif
 
 #main section.testimonials ul li
   padding: 5px 20px 10px 35px
@@ -176,14 +113,6 @@ a.cta span
   float: none
   width: auto
   border-right: 0
-
-#main section.testimonials ul li h3
-  font-size: 13px
-  margin: 0
-  padding: 0
-
-#main section.testimonials ul li p
-  margin: 3px 0 0 0
 
 
 /* ----------------- Reading plans ---------------------- */
