--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -7,7 +7,7 @@
   reading       = presenter.reading
   content_page  = presenter.content_page
 
-.mobile
+.mobile#mobile-sb-subscription{class: ('initial' if presenter.initial_load?)}
   .reader_modal_header
     %nav
       %a.close_btn.subscription_close_btn
@@ -70,18 +70,9 @@
               %a{href: (content_page == index) ? nil : user_subscription_path(current_user, subscription , day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version])}
                 = ref.ref.safe_human
 
-<<<<<<< HEAD
 - if reading.devotional
   .widget
     %header= t("plans.devotional")
     %ul.widget_menu
       %li
         %p= reading.devotional.html_safe
-=======
-  - if reading.devotional
-    .widget.devotional
-      %header= t("plans.devotional")
-      %ul.widget_menu
-        %li
-          %p= reading.devotional.html_safe
->>>>>>> Share Button and Share menu JS
