Sample reading for plans and mute styling for verse label numbers.

--- a/app/assets/stylesheets/_global_html.sass
+++ b/app/assets/stylesheets/_global_html.sass
@@ -42,11 +42,16 @@ small,
 .mute a
   color: $mute
 
+.mute .verse .label
+  color: #AAA // making this color lighter than $mute at #888
+
 .mute a:hover
   color: $body_text
 
-.mute .focused
+.mute .focused,
+.mute .focused .label
   color: $body_text
+
 
 .callout
   background:
