--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -1,10 +1,11 @@
 // Current Parameters:
 // presenter: Presenter::Sidebar::Subscription
 
-- subscription  = presenter.subscription
-- day           = presenter.day
-- reading       = presenter.reading
-- content_page  = presenter.content_page
+:ruby
+  subscription  = presenter.subscription
+  day           = presenter.day
+  reading       = presenter.reading
+  content_page  = presenter.content_page
 
 #sb-subscription
   .widget.widget-notice.widget_last_fixed{style: "width:268px;"}
