--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -1,6 +1,20 @@
 // `Widgets
 //----------------------------------------------------------------------------------------------------
 
+.widget li.active
+  background: #ddd
+  border-top: none
+
+.widget li.active span
+  display: block
+  font-size: 13px
+  padding: 10px 20px 10px 15px
+  line-height: 1
+
+.widget li.content_target a
+  background-image: none
+  padding-left: 15px
+
 .widget h2
   font-size: 16px
   margin: 20px 20px 10px 20px
