fixed RP day view overlay styles - closes #140

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -229,6 +229,9 @@ html.mobile,
   #sidebar .widget.devotional
     margin-top: 30px
 
+  #sidebar .widget.subscription
+    margin-top: 0px !important
+
   #sidebar .widget.devotional header
     position: static !important
     width: 100%
@@ -248,6 +251,9 @@ html.mobile,
     border: 0px
     box-shadow: none
     margin: 0px
+    position: relative
+    top: 0px
+    width: auto !important
 
   #sidebar .widget-notice a
     color: #202020
